# StoreBook

./: README.md  local.properties  settings.gradle
app/: build.gradle
app/src/androidTestDebug/java/: BookAdapterTest.java  FavoritesAdapterTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Book.cpp  Book.h  BookManager.cpp  BookManager.h  CMakeLists.txt  app.cpp  http.cpp  http.h  https.cpp  https.h
app/src/main/java/com/example/bookStore/: BookAdapter.java  BookDetailActivity.java  FavoritesActivity.java  FavoritesAdapter.java  MainActivity.java  MainActivity.kt
app/src/main/java/com/example/bookStore/ui/favorites/: FavoritesActivity.java
app/src/main/java/com/example/bookStore/ui/favorites/adapter/: FavoritesAdapter.java
app/src/main/java/com/example/bookStore/ui/main/: BookDetailActivity.java  MainActivity.java
app/src/main/java/com/example/bookStore/ui/main/adapter/: BookAdapter.java
app/src/main/res/drawable/: image_border.xml
app/src/main/res/layout/: activity_book_detail.xml  activity_favorites.xml  activity_main.xml  item_book.xml
app/src/main/res/values/: strings.xml
